--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,27 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+* {
+	padding: 0px;
+	margin: 0px;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+a, a:link, a:visited  {
+    text-decoration: none;
+    color: #000;
+}
+
+ul, ul li {
+	list-style: none;
+}
+
+label {
+	cursor: pointer;
+}
