--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,46 @@
-.title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.main {
+.events {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  gap: 5px;
+}
+
+.notificationOff {
+  height: 50px;
+  background-color: #f7f3f3;
+  text-align: center;
+  padding: 15px;
+  transition: all 5s;
+  color: #fff;
+}
+
+.notificationOn {
+  height: 50px;
+  background-color: #21f305;
+  text-align: center;
+  padding: 15px;
+  transition: all 1s;
+  color: #000;
+}
+
+.currentEvents, .upcomingEvents {
+  text-align: center;
+}
+
+.events__title {
+  font-size: 23px;
+  background-color: #fff;
+}
+
+.title {
+  background-color: #c0c0c0;
+  padding: 10px 0;
+}
+
+.eventsItems {
+  display: flex;
+  flex-direction: column;
+}
+
+.eventsItem {
+
 }
