--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,11 +5,10 @@
 }
 
 .notificationOff {
-  height: 50px;
-  background-color: #f7f3f3;
+  height: 0;
+  background-color: #fff;
   text-align: center;
-  padding: 15px;
-  transition: all 5s;
+  transition: all 3s;
   color: #fff;
 }
 
@@ -17,7 +16,7 @@
   height: 50px;
   background-color: #21f305;
   text-align: center;
-  padding: 15px;
+  padding: 15px 0;
   transition: all 1s;
   color: #000;
 }
@@ -29,6 +28,7 @@
 .events__title {
   font-size: 23px;
   background-color: #fff;
+  padding: 10px 0;
 }
 
 .title {
@@ -39,6 +39,7 @@
 .eventsItems {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2px;
 }
 
 .eventsItem {
