--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -10,4 +10,20 @@
 
 .logo {
   color: #fff;
+  padding: 10px;
+}
+
+.description {
+  color: chartreuse;
+}
+
+@media (max-width: 560px) {
+  .description {
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .secondDescription {
+    display: none;
+  }
 }
