--- a/src/components/Radio/radio.module.css
+++ b/src/components/Radio/radio.module.css
@@ -14,6 +14,7 @@
   height: 60px;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: all.3s;
@@ -25,9 +26,17 @@
   height: 60px;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: all.3s;
+}
+
+.coefficient {
+  font-size: 20px;
+  font-weight: 100;
+  color: chartreuse;
+  -webkit-text-stroke: 1px #000;
 }
 
 .button {
@@ -41,9 +50,26 @@
   min-width: 120px;
 }
 
+.buttonOff {
+  margin-top: 20px;
+  background-color: #c0c0c0;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  min-height: 30px;
+  min-width: 120px;
+}
+
 .button:hover {
   background-color: chartreuse;
   transition: all .3s;
   color: #000;
   cursor: pointer;
+}
+
+@media (max-width: 650px) {
+  .radio {
+    flex-direction: column;
+  }
 }
